# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wgpu-wasm"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
opt-level = 'z'
strip = true
panic = 'abort'

[dependencies]
napi = { default-features = false, version = "2.10.6" }
napi-derive = { features = ["compat-mode"], default-features = false, version = "2.9.4" }
wee_alloc = { default-features = false, version = "0.4.5" }
